# patterns

./: .gitpod.yml  CMakeLists.txt  README.md  main.cpp
common/: pattern_tester.hpp
creational/: prototype_pattern.cpp  singleton_pattern.cpp
